<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="airticket"
            type="np.com.manishtuladhar.airticket.AirTicketPass" />
    </data>

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            tools:context=".MainActivity">

            <!--    =============== Passenger View =======================-->

            <TextView
                android:id="@+id/tvPassengerLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:letterSpacing="0.5"
                android:text="@string/passenger_label"
                app:layout_constraintLeft_creator="1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_creator="1"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvPassengerName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@{airticket.passengerName}"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/colorPrimary"
                android:textSize="31sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_creator="1"
                app:layout_constraintTop_toBottomOf="@id/tvPassengerLabel" />


            <!--    =============== Flight View =======================-->

            <ImageView
                android:id="@+id/leftRectangle"
                android:layout_width="60dp"
                android:layout_height="80dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/shape_rectangle_stroke"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvPassengerName" />

            <ImageView
                android:id="@+id/divider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryLight"
                app:layout_constraintBottom_toTopOf="@id/rightRectangle"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toRightOf="@+id/leftRectangle"
                app:layout_constraintRight_toLeftOf="@+id/rightRectangle"
                app:layout_constraintTop_toBottomOf="@id/rightRectangle" />

            <ImageView
                android:id="@+id/rightRectangle"
                android:layout_width="60dp"
                android:layout_height="80dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/shape_rectangle_stroke"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvPassengerName" />

            <TextView
                android:id="@+id/tvOriginAirport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{airticket.originCode}"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                app:layout_constraintBottom_toBottomOf="@id/divider"
                app:layout_constraintLeft_toLeftOf="@id/leftRectangle"
                app:layout_constraintRight_toRightOf="@id/leftRectangle"
                app:layout_constraintTop_toBottomOf="@id/divider" />

            <TextView
                android:id="@+id/tvDestinationAirport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{airticket.destCode}"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                app:layout_constraintBottom_toBottomOf="@id/divider"
                app:layout_constraintLeft_toLeftOf="@id/rightRectangle"
                app:layout_constraintRight_toRightOf="@id/rightRectangle"
                app:layout_constraintTop_toBottomOf="@id/divider" />


            <ImageView
                android:id="@+id/imagePlane"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/airplane"
                app:layout_constraintBottom_toTopOf="@+id/divider"
                app:layout_constraintLeft_toRightOf="@id/leftRectangle"
                app:layout_constraintRight_toLeftOf="@id/rightRectangle"
                app:layout_constraintTop_toBottomOf="@id/tvPassengerName" />


            <TextView
                android:id="@+id/tvFlightCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="@{airticket.flightCode}"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/colorPrimary"
                app:layout_constraintLeft_toRightOf="@id/leftRectangle"
                app:layout_constraintRight_toLeftOf="@id/rightRectangle"
                app:layout_constraintTop_toBottomOf="@+id/divider" />


            <!--    =============== Boarding Time View =======================-->

            <TextView
                android:id="@+id/tvBoardingTimeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="30dp"
                android:letterSpacing="0.3"
                android:text="@string/boarding_time_label"
                android:textAllCaps="true"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvFlightCode" />

            <TextView
                android:id="@+id/tvBoardingTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/boarding_time"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@android:color/black"
                app:layout_constraintLeft_toLeftOf="@id/tvBoardingTimeLabel"
                app:layout_constraintTop_toBottomOf="@id/tvBoardingTimeLabel" />

            <TextView
                android:id="@+id/tvDepartureLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:letterSpacing="0.3"
                android:text="@string/departure_label"
                android:textAllCaps="true"
                app:layout_constraintLeft_toLeftOf="@id/tvBoardingTime"
                app:layout_constraintTop_toBottomOf="@id/tvBoardingTime" />

            <TextView
                android:id="@+id/tvDeparture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/departure_time"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@android:color/holo_green_dark"
                app:layout_constraintLeft_toLeftOf="@id/tvDepartureLabel"
                app:layout_constraintTop_toBottomOf="@id/tvDepartureLabel" />


            <TextView
                android:id="@+id/tvBoardingInTimeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="16dp"
                android:letterSpacing="0.3"
                android:text="@string/boarding_in_time_label"
                android:textAllCaps="true"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvFlightCode" />

            <TextView
                android:id="@+id/tvBoardingInTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/boarding_in_time"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@android:color/holo_red_dark"
                app:layout_constraintLeft_toLeftOf="@id/tvBoardingInTimeLabel"
                app:layout_constraintTop_toBottomOf="@id/tvBoardingInTimeLabel" />

            <TextView
                android:id="@+id/tvArrivalTimeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:letterSpacing="0.3"
                android:text="@string/arrival_label"
                android:textAllCaps="true"
                app:layout_constraintLeft_toLeftOf="@id/tvBoardingInTime"
                app:layout_constraintTop_toBottomOf="@id/tvBoardingInTime" />

            <TextView
                android:id="@+id/tvArrivalTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/arrival_time"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@android:color/holo_green_dark"
                app:layout_constraintLeft_toLeftOf="@id/tvArrivalTimeLabel"
                app:layout_constraintTop_toBottomOf="@id/tvArrivalTimeLabel" />


            <!--    =============== Table View =======================-->

            <ImageView
                android:id="@+id/tableHeaderImage"
                android:layout_width="0dp"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:background="@color/colorPrimaryLight"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvDeparture" />


            <ImageView
                android:id="@+id/tableImage"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="@+id/tvTerminal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tableHeaderImage" />

            <!--    =============== Table Data View =======================-->

            <TextView
                android:id="@+id/tvTerminalLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terminal_label"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textColor="@android:color/black"
                app:layout_constraintBottom_toBottomOf="@id/tableHeaderImage"
                app:layout_constraintLeft_toLeftOf="@id/tvTerminal"
                app:layout_constraintRight_toRightOf="@id/tvTerminal"
                app:layout_constraintTop_toTopOf="@id/tableHeaderImage" />

            <TextView
                android:id="@+id/tvTerminal"
                android:layout_width="120dp"
                android:layout_height="0dp"
                android:text="@{airticket.departureTerminal}"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@android:color/white"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="@id/tableImage"
                app:layout_constraintRight_toRightOf="@id/tableImage"
                app:layout_constraintTop_toTopOf="@id/tableImage" />

            <TextView
                android:id="@+id/tvGateLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gate"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textColor="@android:color/black"
                app:layout_constraintBottom_toBottomOf="@id/tableHeaderImage"
                app:layout_constraintLeft_toLeftOf="@id/tvGate"
                app:layout_constraintRight_toRightOf="@id/tvGate"
                app:layout_constraintTop_toTopOf="@id/tableHeaderImage" />

            <TextView
                android:id="@+id/tvGate"
                android:layout_width="120dp"
                android:layout_height="0dp"
                android:text="@{airticket.departureGate}"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="@id/tableImage"
                app:layout_constraintLeft_toLeftOf="@id/tableImage"
                app:layout_constraintRight_toRightOf="@id/tableImage"
                app:layout_constraintTop_toBottomOf="@id/tableHeaderImage" />

            <TextView
                android:id="@+id/tvSeatLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seat"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textColor="@android:color/black"
                app:layout_constraintBottom_toBottomOf="@id/tableHeaderImage"
                app:layout_constraintLeft_toLeftOf="@id/tvSeat"
                app:layout_constraintRight_toRightOf="@id/tvSeat"
                app:layout_constraintTop_toTopOf="@id/tableHeaderImage" />

            <TextView
                android:id="@+id/tvSeat"
                android:layout_width="120dp"
                android:layout_height="0dp"
                android:text="@{airticket.seatNumber}"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@android:color/white"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintLeft_toLeftOf="@id/tableImage"
                app:layout_constraintRight_toRightOf="@id/tableImage"
                app:layout_constraintTop_toTopOf="@id/tableImage" />


            <!--    =============== Bar Code View =======================-->

            <ImageView
                android:id="@+id/barCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:scaleType="fitCenter"
                android:src ="@drawable/barcode"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tableImage" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>