<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="boardingTable"
            type="np.com.manishtuladhar.airticket.AirTicketPass" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/tableHeaderImage"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:background="@color/colorPrimaryLight"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


        <ImageView
            android:id="@+id/tableImage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="@+id/tvTerminal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tableHeaderImage" />

        <TextView
            android:id="@+id/tvTerminalLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terminal_label"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="@id/tableHeaderImage"
            app:layout_constraintLeft_toLeftOf="@id/tvTerminal"
            app:layout_constraintRight_toRightOf="@id/tvTerminal"
            app:layout_constraintTop_toTopOf="@id/tableHeaderImage" />

        <TextView
            android:id="@+id/tvTerminal"
            android:layout_width="120dp"
            android:layout_height="0dp"
            android:text="@{boardingTable.departureTerminal}"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@android:color/white"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@id/tableImage"
            app:layout_constraintRight_toRightOf="@id/tableImage"
            app:layout_constraintTop_toTopOf="@id/tableImage" />

        <TextView
            android:id="@+id/tvGateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gate"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="@id/tableHeaderImage"
            app:layout_constraintLeft_toLeftOf="@id/tvGate"
            app:layout_constraintRight_toRightOf="@id/tvGate"
            app:layout_constraintTop_toTopOf="@id/tableHeaderImage" />

        <TextView
            android:id="@+id/tvGate"
            android:layout_width="120dp"
            android:layout_height="0dp"
            android:text="@{boardingTable.departureGate}"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="@id/tableImage"
            app:layout_constraintLeft_toLeftOf="@id/tableImage"
            app:layout_constraintRight_toRightOf="@id/tableImage"
            app:layout_constraintTop_toBottomOf="@id/tableHeaderImage" />

        <TextView
            android:id="@+id/tvSeatLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seat"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="@id/tableHeaderImage"
            app:layout_constraintLeft_toLeftOf="@id/tvSeat"
            app:layout_constraintRight_toRightOf="@id/tvSeat"
            app:layout_constraintTop_toTopOf="@id/tableHeaderImage" />

        <TextView
            android:id="@+id/tvSeat"
            android:layout_width="120dp"
            android:layout_height="0dp"
            android:text="@{boardingTable.seatNumber}"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@android:color/white"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="@id/tableImage"
            app:layout_constraintRight_toRightOf="@id/tableImage"
            app:layout_constraintTop_toTopOf="@id/tableImage" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>